# netease-cloud-music-flat

./: .gitignore  README.md  main.py  netease-cloud-music-flat.code-workspace  pyproject.toml
src/: main.py  models.py  player.py
src/api/: README.md  __init__.py  api.code-workspace  client.py  constants.py  encrypt.py  models.py  pyproject.toml  utils.py
src/pages/: homepage.py  login.py  my.py  player.py  playlist.py  search.py
